force-app/main/default/objects/Sales_Contribution_Stock_Child__c/Sales_Contribution_Stock_Child__c.object-meta.xml
<CustomObject>
    <label>Sales Contribution Stock Child</label>
    <nameField>
        <label>Sales Contribution Stock Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Contribution Stock Child</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>