force-app/main/default/objects/Sales_Contribution_Stock_Child__c/fields/DateReport__c.field-meta.xml
<CustomField>
    <fullName>DateReport__c</fullName>
    <label>DateReport</label>
    <type>Date</type>
</CustomField>