force-app/main/default/objects/Sales_Contribution_Stock_Child__c/fields/Order_Month__c.field-meta.xml
<CustomField>
    <fullName>Order_Month__c</fullName>
    <label>Order Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>