force-app/main/default/objects/Sales_Contribution_Stock_Child__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>