force-app/main/default/objects/Sales_Contribution_Stock_Child__c/fields/Sales_Contribution_Stock__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contribution_Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Contribution Stock</label>
    <referenceTo>SalesContributionStock__c</referenceTo>
    <relationshipLabel>Sales Contribution Stock Child</relationshipLabel>
    <relationshipName>Sales_Contribution_Stock_Child</relationshipName>
    <type>Lookup</type>
</CustomField>