force-app/main/default/objects/Sales_Contribution_Stock_Child__c/fields/Turn__c.field-meta.xml
<CustomField>
    <fullName>Turn__c</fullName>
    <label>Turn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>